--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <main>
       <h1>Home page</h1>
       <canvas id="fCanvas"></canvas>
+      <canvas id="iCanvas"></canvas>
+      <canvas id="bCanvas"></canvas>
     </main>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.6/fabric.min.js"
