2 files modified, 1 added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="fabConvertor.js"></script>
   </body>
 </html>
