3 files modified, 1 added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <canvas id="iCanvas"></canvas>
       <canvas id="bCanvas"></canvas>
     </main>
+    <input type="text" name="sample" id="textBoxTest" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.3/fabric.min.js"
       integrity="sha512-UnAJyJL4FYSmJbPLV25grTQCJ1hGEA0Y4T2ksmHBBHji/sHVWkzA7l2+kpzRfgDuOg5vgNekNCamOmfcmQmiVQ=="
